--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Kung Fu Panda Characters</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
   </head>
 
   <body>
